Minor fixes and alignments

--- a/assets/css/wpdk-controls.css
+++ b/assets/css/wpdk-controls.css
@@ -173,7 +173,6 @@ select.wpdk-form-select
   margin                : 0 4px 0 2px;
   color                 : #444;
   outline               : none;
-  font-size             : 13px !important;
   vertical-align        : middle;
   -moz-box-shadow       : inset 0 2px 3px #eee, 0 1px 0 #fff;
   -webkit-box-shadow    : inset 0 2px 3px #eee, 0 1px 0 #fff;
@@ -496,7 +495,6 @@ div.wpdk-form-row
   line-height    : 100%;
   margin         : 0 0 16px;
   padding        : 0;
-  font-size      : 13px;
   *zoom          : 1 !important;
   vertical-align : middle;
 }
@@ -516,10 +514,8 @@ div.wpdk-form-row:after
 label.wpdk-form-label
 {
   line-height    : 100%;
-  font-size      : 13px;
-  font-weight    : bold;
   vertical-align : middle;
-  margin         : 0 6px 0 16px;
+  margin         : 0 6px 0 6px;
 }
 
 label.wpdk-form-label.wpdk-form-label-top
